fixed some spacing on VJ Demo page starting to format hamburger menu for mobile

--- a/style_mobile.css
+++ b/style_mobile.css
@@ -65,9 +65,9 @@ font-weight: lighter;
 
 .content-section1{
 
-    font-size: 2.5em;
+    font-size: 2.0em;
     color: #777;
-    margin-top: 5vh;
+    margin-top: 2vh;
 }
 
 
