--- a/tile_mobile.css
+++ b/tile_mobile.css
@@ -12,10 +12,10 @@
     gap: 9.5vw;
     font-family: sans-serif;
     padding-top: 1.1vh;
-    margin-bottom: 5vh;
+    margin-bottom: 1vh;
     max-width: 85vw;
     display: grid;
-    padding-bottom: 20vh;
+    
 
    
     
